--- a/src/view/homecare/content.hbs
+++ b/src/view/homecare/content.hbs
@@ -1,39 +1,28 @@
 <div class="holder">
     <article class="wrap">
-        <h2>Mono monomon monom mono mon momonomo</h2>
+        <h2>Assistência Qualificada</h2>
 
-        <h3>Monomon monom mono</h3>
+        <h3>Bem estar e segurança</h3>
 
         <picture class="right">
-            <img src="img/page-wounds.png">
+            <img src="img/page-homecare.png">
         </picture>
 
         <p>
-            Momonomon monom mono mon momonomo monomon monom mono mon momonomo
-            monomon monom mono mon momonomo monomon monom mono mon momonomo
-            monomon monom mono mon momonomo
+            A Regenera Home Care entende o quanto a sua saúde e a saúde de quem 
+            você ama são primordiais. Além de oferecer uma assistência qualificada, 
+            prezamos pelo conforto, bem estar e segurança dos nossos assistidos.
         </p>
 
         <p>
-            Momonomon monom mono mon momonomo monomon monom mono mon momonomo
-            monomon monom mono mon momonomo monomon monom mono mon momonomo
-            monomon monom mono mon momonomo
+            Todos os nossos planos de cuidado contemplam visita semanal de 
+            enfermeiro para plano de cuidados e prontuário eletrônico, que 
+            atende a LGPD. 
         </p>
 
-        <h3>Monomon monom mono</h3>
-
         <p>
-            Momonomon monom mono mon momonomo monomon monom mono mon momonomo
-            monomon monom mono mon momonomo monomon monom mono mon momonomo
-            monomon monom mono mon momonomo
-        </p>
-
-        <h3>Monomon monom mono</h3>
-
-        <p>
-            Momonomon monom mono mon momonomo monomon monom mono mon momonomo
-            monomon monom mono mon momonomo monomon monom mono mon momonomo
-            monomon monom mono mon momonomo
+            A vida é um bem precioso e deve estar nas mãos de quem cuida com 
+            conhecimento, experiência e carinho.
         </p>
     </article>
 </div>
