--- a/src/view/index/action-bar.hbs
+++ b/src/view/index/action-bar.hbs
@@ -28,7 +28,7 @@
         </div>
 
         <div>
-            <button type="button" data-link="{{ downloadEbook }}">
+            <button type="button" class="autolink" data-link="{{ downloadEbook }}">
                 Baixar e-book
 
                 <i class="fa-solid fa-arrow-right fa-xl"></i>
