Criação da página quem somos e ajuste no logotipo para celulares

--- a/src/app.scss
+++ b/src/app.scss
@@ -42,6 +42,8 @@ body {
 @import 'scss/index/action-bar.scss';
 @import 'scss/index/departments.scss';
 
+@import 'scss/contact/address.scss';
+
 @import 'scss/common/header-page.scss';
 @import 'scss/common/contact-bar.scss';
 @import 'scss/common/navigation-bar.scss';
