--- a/src/view/about-us/content.hbs
+++ b/src/view/about-us/content.hbs
@@ -5,7 +5,7 @@
         <h3>Quem Somos?</h3>
 
         <picture class="right">
-            <img src="img/page-wounds.png">
+            <img src="img/page-about-us.png">
         </picture>
 
         <p>
