--- a/src/view/common/footer.hbs
+++ b/src/view/common/footer.hbs
@@ -11,7 +11,7 @@
 
                     <span>{{ address }}, </span>
 
-                    <span class="new-line">{{ cep }}, {{ city }}</span>
+                    <span class="new-line">{{ district }}, {{ city }}, CEP {{ cep }}</span>
                 </p>
 
                 <p class="phone">
