--- a/src/view/conditions/page.hbs
+++ b/src/view/conditions/page.hbs
@@ -8,7 +8,7 @@
         {{> ../common/meta }}
     </head>
 
-    <body class="wounds">
+    <body class="conditions">
         {{> ../common/header-page }}
 
         {{> ../common/contact-bar }}
