--- a/src/view/contact/page.hbs
+++ b/src/view/contact/page.hbs
@@ -8,7 +8,7 @@
         {{> ../common/meta }}
     </head>
 
-    <body class="wounds">
+    <body class="contact">
         {{> ../common/header-page }}
 
         {{> ../common/contact-bar }}
