--- a/src/view/wounds/content.hbs
+++ b/src/view/wounds/content.hbs
@@ -1,23 +1,22 @@
 <div class="holder">
     <article class="wrap">
-        <h2>Mono monomon monom mono mon momonomo</h2>
+        <h2>Atendimento certo, com foco no indivíduo</h2>
 
-        <h3>Monomon monom mono</h3>
+        <h3>A cicatrização de feridas</h3>
 
         <picture class="right">
             <img src="img/page-wounds.png">
         </picture>
 
         <p>
-            Momonomon monom mono mon momonomo monomon monom mono mon momonomo
-            monomon monom mono mon momonomo monomon monom mono mon momonomo
-            monomon monom mono mon momonomo
+            A cicatrização de feridas complexas exige conhecimento, uso adequado 
+            de tecnologias e uma visão sistêmica da pessoa que sofre com este estigma. 
         </p>
 
         <p>
-            Momonomon monom mono mon momonomo monomon monom mono mon momonomo
-            monomon monom mono mon momonomo monomon monom mono mon momonomo
-            monomon monom mono mon momonomo
+            Dra Maria Teresa Dias oferece atendimento humanizado,  focado em 
+            resultados e no conforto do paciente. O tempo não cicatriza,  mas o 
+            atendimento certo, com foco no individuo sim!
         </p>
 
         <h3>Monomon monom mono</h3>
