Adicionado texto às páginas homecase, feridas e consutoria

--- a/src/view/consultancy/content.hbs
+++ b/src/view/consultancy/content.hbs
@@ -9,6 +9,53 @@
         </picture>
 
         <p>
+            O treinamento contínuo dos profissionais da saúde desempenha um papel 
+            fundamental no aprimoramento da qualidade do atendimento e na melhoria 
+            da performance individual de cada membro da equipe. Ao investir em 
+            programas de capacitação e desenvolvimento, as instituições de saúde 
+            não apenas promovem o crescimento da equipe, mas também garantem um 
+            cuidado mais eficaz e compassivo para os pacientes.
+        </p>
+
+        <p>
+            O treinamento oferece aos profissionais da saúde a oportunidade de 
+            aprimorar suas habilidades técnicas, atualizar seus conhecimentos em 
+            relação às melhores práticas e se familiarizar com avanços e inovações 
+            no campo da saúde. Isso não apenas os capacita a lidar com situações 
+            desafiadoras de forma mais eficaz, mas também os torna mais confiantes 
+            em sua capacidade de oferecer um atendimento de excelência.
+        </p>
+
+        <h3>Melhoria contínua da qualidade</h3>
+
+        <p>
+            Além disso, o treinamento contínuo promove o crescimento pessoal e 
+            profissional dos profissionais da saúde, incentivando a busca por 
+            conhecimento, aprimorando habilidades de comunicação e promovendo a 
+            colaboração e o trabalho em equipe. Esses aspectos são essenciais 
+            para criar um ambiente de trabalho saudável e altamente produtivo, 
+            o que, por sua vez, se reflete positivamente na experiência dos 
+            pacientes.
+        </p>
+
+        <p>
+            Ao investir no treinamento dos profissionais da saúde, estamos 
+            investindo na melhoria contínua da qualidade do cuidado que prestamos. 
+            Através desse compromisso com a excelência, estamos não apenas 
+            fortalecendo a equipe, mas também garantindo que os pacientes recebam 
+            o mais alto padrão de atendimento e suporte em todas as fases de sua 
+            jornada de saúde.
+        </p>
+
+        <p>
+            Estamos ansiosos para compartilhar com você nossas experiências e 
+            conquistas à medida que continuamos nos capacitando e nos aprimorando 
+            como profissionais da saúde. Essa jornada de desenvolvimento é tão 
+            significativa quanto desafiadora, e estamos confiantes de que, juntos, 
+            alcançaremos novos patamares de excelência.
+        </p>
+
+        <p>
             Uma equipe treinada, ciente do seu papel na assistência, que tenha 
             claro as atividades a serem realizadas é muito mais engajada e produz 
             resultados muito melhores!
@@ -22,23 +69,6 @@
         <p>
             <a href="{{ pageContact.link }}">Entre em contato conosco</a> e 
             torne seus funcionários um time de sucesso!
-        </p>
-        
-
-        <h3>Monomon monom mono</h3>
-
-        <p>
-            Momonomon monom mono mon momonomo monomon monom mono mon momonomo
-            monomon monom mono mon momonomo monomon monom mono mon momonomo
-            monomon monom mono mon momonomo
-        </p>
-
-        <h3>Monomon monom mono</h3>
-
-        <p>
-            Momonomon monom mono mon momonomo monomon monom mono mon momonomo
-            monomon monom mono mon momonomo monomon monom mono mon momonomo
-            monomon monom mono mon momonomo
         </p>
     </article>
 </div>
