--- a/src/view/homecare/content.hbs
+++ b/src/view/homecare/content.hbs
@@ -15,6 +15,32 @@
         </p>
 
         <p>
+            Cuidar de um ente querido em transição é uma responsabilidade que 
+            demanda tempo, energia e atenção constantes. No entanto, adquirir um 
+            serviço de home care pode facilitar significativamente esse processo, 
+            proporcionando cuidados especializados no aconchego do lar.
+        </p>
+
+        <h3>Tranquilidade</h3>
+
+        <p>
+            Imagine a tranquilidade de saber que seu ente querido está recebendo 
+            cuidados profissionais, personalizados e compassivos, enquanto desfruta 
+            do conforto e familiaridade do lar. Isso não apenas alivia o fardo 
+            emocional, mas também permite que a transição seja vivida com mais 
+            dignidade e qualidade de vida.
+        </p>
+
+        <p>
+            A importância de adquirir um serviço de home care nesse momento delicado 
+            não pode ser subestimada. Além de proporcionar cuidados especializados, 
+            a presença de profissionais capacitados pode ajudar a minimizar o 
+            estresse e a ansiedade tanto do paciente quanto dos familiares, 
+            permitindo que todos se concentrem em fortalecer os laços e desfrutar 
+            de momentos significativos juntos.
+        </p>
+
+        <p>
             Todos os nossos planos de cuidado contemplam visita semanal de 
             enfermeiro para plano de cuidados e prontuário eletrônico, que 
             atende a LGPD. 
@@ -23,22 +49,6 @@
         <p>
             A vida é um bem precioso e deve estar nas mãos de quem cuida com 
             conhecimento, experiência e carinho.
-        </p>
-
-        <h3>Monomon monom mono</h3>
-
-        <p>
-            Momonomon monom mono mon momonomo monomon monom mono mon momonomo
-            monomon monom mono mon momonomo monomon monom mono mon momonomo
-            monomon monom mono mon momonomo
-        </p>
-
-        <h3>Monomon monom mono</h3>
-
-        <p>
-            Momonomon monom mono mon momonomo monomon monom mono mon momonomo
-            monomon monom mono mon momonomo monomon monom mono mon momonomo
-            monomon monom mono mon momonomo
         </p>
     </article>
 </div>
