--- a/src/view/wounds/content.hbs
+++ b/src/view/wounds/content.hbs
@@ -9,6 +9,48 @@
         </picture>
 
         <p>
+            A cicatrização de feridas, lesões ou cirurgias é um processo crucial 
+            que pode afetar significativamente a qualidade de vida de uma pessoa. 
+            A presença de um profissional capacitado durante esse processo é de 
+            extrema importância, pois pode garantir uma recuperação mais eficaz 
+            e confortável, permitindo que o indivíduo retome suas atividades 
+            diárias com maior tranquilidade.
+        </p>
+        
+        <p>
+            Ao ser acompanhado por um profissional capacitado durante o processo 
+            de cicatrização, a pessoa tem acesso a cuidados especializados, 
+            orientação personalizada e monitoramento contínuo do progresso de 
+            sua recuperação. Isso não apenas contribui para uma cicatrização 
+            mais rápida e eficiente, mas também minimiza o risco de complicações, 
+            infecções e desconforto.
+        </p>
+
+        <p>
+            Além disso, a presença de um profissional capacitado pode proporcionar 
+            conforto emocional, alívio da ansiedade e segurança durante o período 
+            de cicatrização. Essa atenção dedicada e cuidadosa pode elevar a 
+            autoestima do paciente e promover confiança em seu próprio processo 
+            de recuperação.
+        </p>
+
+        <h3>Atendimento humanizado</h3>
+
+        <p>
+            A importância de contar com um profissional capacitado durante a 
+            cicatrização vai além da mera assistência técnica. Trata-se de oferecer 
+            suporte holístico, encorajamento e compreensão, contribuindo para a 
+            melhoria da qualidade de vida e bem-estar emocional do indivíduo 
+            durante esse período desafiador.
+        </p>
+
+        <p>
+            Estamos aqui para te apoiar e garantir que tenha o melhor cuidado 
+            possível durante o processo de cicatrização. Lembre-se sempre de que 
+            estamos ao seu lado, oferecendo nosso apoio e amor incondicional.
+        </p>
+
+        <p>
             A cicatrização de feridas complexas exige conhecimento, uso adequado 
             de tecnologias e uma visão sistêmica da pessoa que sofre com este estigma. 
         </p>
@@ -17,22 +59,6 @@
             Dra Maria Teresa Dias oferece atendimento humanizado,  focado em 
             resultados e no conforto do paciente. O tempo não cicatriza,  mas o 
             atendimento certo, com foco no individuo sim!
-        </p>
-
-        <h3>Monomon monom mono</h3>
-
-        <p>
-            Momonomon monom mono mon momonomo monomon monom mono mon momonomo
-            monomon monom mono mon momonomo monomon monom mono mon momonomo
-            monomon monom mono mon momonomo
-        </p>
-
-        <h3>Monomon monom mono</h3>
-
-        <p>
-            Momonomon monom mono mon momonomo monomon monom mono mon momonomo
-            monomon monom mono mon momonomo monomon monom mono mon momonomo
-            monomon monom mono mon momonomo
         </p>
     </article>
 </div>
