Criação da janela modal

--- a/src/view/index/header.hbs
+++ b/src/view/index/header.hbs
@@ -19,7 +19,7 @@
                 de forma humanizada no conforto do lar
             </h2>
 
-            <button type="button">
+            <button type="button" class="modal-button">
                 <i class="fa-regular fa-circle-play fa-2xl"></i>
                 Veja como trabalhamos
             </button>
