--- a/src/view/index/page.hbs
+++ b/src/view/index/page.hbs
@@ -20,5 +20,7 @@
         {{> ../common/footer }}
         
         {{> ../common/mobile-menu }}
+
+        {{> ../common/modal }}
     </body>
 </html>
