--- a/src/app.scss
+++ b/src/app.scss
@@ -49,4 +49,5 @@ body {
 @import 'scss/common/navigation-bar.scss';
 @import 'scss/common/footer.scss';
 @import 'scss/common/mobile-menu.scss';
+@import 'scss/common/modal.scss';
 @import 'scss/common/article.scss';
