--- a/src/scss/index/header.scss
+++ b/src/scss/index/header.scss
@@ -17,6 +17,7 @@ body.index > header {
     & .wrap {
         margin-top: -260px;
         transition: width .5s;
+        text-align: center;
 
         & h1,
         & h2 {
@@ -25,7 +26,6 @@ body.index > header {
             color: $text-primary;
             font-size: 24px;
             width: 40%;
-            text-align: left;
             padding-left: 30px;
             display: none;
         }
@@ -36,9 +36,7 @@ body.index > header {
         }
 
         & button {
-            display: block;
-            position: relative;
-            margin: 0;
+            display: inline-block;
             margin-top: 120px;
             text-align: left;
             text-decoration: none;
@@ -72,11 +70,11 @@ body.index > header {
 
         & .wrap {
             margin-top: -230px;
+            text-align: left;
 
             & h1,
             & h2 {
-            width: 50%;
-                text-align: left;
+                width: 50%;
                 padding: 5px 40px;
                 padding-left: 10px;
                 background-color: transparent;
@@ -87,6 +85,7 @@ body.index > header {
             }
 
             & button {
+                display: block;
                 margin-left: 0;
             }
         }
