Adicionado logotipo diferente para homecare

--- a/src/view/homecare/page.hbs
+++ b/src/view/homecare/page.hbs
@@ -9,7 +9,7 @@
     </head>
 
     <body class="homecare">
-        {{> ../common/header-page }}
+        {{> custom-header-page }}
 
         {{> ../common/contact-bar }}
 
